--- a/p11-project5/src/App.css
+++ b/p11-project5/src/App.css
@@ -1,10 +1,26 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     width: 100%;
     height: 100%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-* {
-    margin: 0;
-    padding: 0;
+.productsBoxApp {
+    margin: 0 16px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.headerNavbarAbsolute{
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    background-color: white;
+    top: 0;
 }
