--- a/p11-project5/src/Components/ProductsH2.css
+++ b/p11-project5/src/Components/ProductsH2.css
@@ -1,5 +1,5 @@
 .productsH2 {
-    width: 100%;
+    width: 1230px;
     height: 74px;
     display: flex;
     justify-content: flex-start;
@@ -7,11 +7,11 @@
     margin: 0 auto;
     border: 0 solid;
     box-sizing: border-box;
+
 }
 
 h2 {
     text-align: center;
-    padding: 0 0 0 75px;
     font-size: 26px;
     color: #001018;
 }
